deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: kubernetes-brynjar
  labels:
    app: kubernetes-brynjar
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kubernetes-brynjar
  template:
    metadata:
      labels:
        app: kubernetes-brynjar
    spec:
      containers:
        - name: kubernetes-brynjar
          image: registry.digitalocean.com/olsen/brynjar:latest
          ports:
            - containerPort: 80
